--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react": "^17.0.2",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
+    "react-highlight": "^0.14.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "react-tracker": "0.0.8",
     "react-tracking": "^9.0.0",
     "web-vitals": "^1.1.2",
